# harvest

./: .gitignore  CLAUDE.md  README.md  WIP.md  flake.nix  justfile  mkdocs.yml
.github/workflows/: ci.yml
.specify/memory/: constitution.md
circuits/: generate_fixtures.js  generate_proof.js  test_eddsa_roundtrip.js  voucher_spend.circom
circuits/lib/: customer_sig.js  eddsa_jubjub.circom  escalarmulany_jubjub.circom  escalarmulfix_jubjub.circom  jubjub.circom  jubjub_eddsa.js  jubjub_full.circom  montgomery_jubjub.circom
docs/: index.md  journey.md
docs/architecture/: cryptography.md  economics.md  on-chain.md
docs/protocol/: actors.md  lifecycle.md  security.md  semantics.md
nix/: apps.nix  checks.nix  project.nix
offchain/: cabal.project  cardano-vouchers.cabal  harvest.cabal
offchain/app/: EncodeVK.hs
offchain/src/Cardano/: PlutusData.hs
offchain/src/Cardano/Groth16/: Compress.hs  FFI.hs  Prove.hs  Serialize.hs  Types.hs
offchain/src/Cardano/Vouchers/: Script.hs  Transaction.hs  Types.hs
offchain/src/Harvest/: Actions.hs  Script.hs  Transaction.hs  Types.hs
offchain/test/: DevnetEnv.hs  DevnetFullFlowSpec.hs  DevnetRedeemSpec.hs  DevnetRevocationSpec.hs  DevnetSpendSpec.hs  E2ESpec.hs  Ed25519Spec.hs  Fixtures.hs  Groth16Spec.hs  HarvestFlow.hs  Main.hs  SignedDataLayout.hs  SignedDataLayoutSpec.hs  SpendHarness.hs  SpendHarnessSpec.hs  SpendScenario.hs  SpendSetup.hs
offchain/test/fixtures/: acceptor.json  applied-coalition-metadata.hex  applied-script.hex  applied-voucher-redeem.hex  applied-voucher-spend.hex  customer-c1-cert2.json  customer-c2.json  customer.json  input-c1-cert2.json  input-c2.json  input.json  issuer.json  proof-c1-cert2.json  proof-c2.json  proof.json  public-c1-cert2.json  public-c2.json  public.json  verification_key.json
onchain/: plutus-applied.json  plutus.json
onchain/lib/harvest/: coalition_types.ak
onchain/lib/voucher/: types.ak
onchain/validators/: coalition_metadata.ak  voucher_redeem.ak  voucher_revert.ak  voucher_spend.ak  voucher_validator.ak
scripts/: apply-voucher-spend.sh
specs/001-groth16-voucher-spend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-groth16-voucher-spend/checklists/: requirements.md
specs/001-groth16-voucher-spend/contracts/: spend-proof-format.md
specs/002-e2e-tests/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-e2e-tests/checklists/: requirements.md
specs/002-e2e-tests/contracts/: signed-data-layout.md
specs/003-devnet-full-flow/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-devnet-full-flow/checklists/: requirements.md
specs/003-devnet-full-flow/contracts/: actions.md  coalition-metadata-datum.md  voucher-datum.md
specs/004-hydra-certificate-anchoring/: spec.md
specs/023-card-identity/: plan.md  tasks.md
