cabal-version: 3.0
name:          cardano-vouchers
version:       0.1.0.0
synopsis:      ZK voucher system for Cardano using Groth16 proofs
license:       Apache-2.0
build-type:    Simple

library
  hs-source-dirs:  src
  default-language: Haskell2010
  ghc-options:     -Wall
  exposed-modules:
    Cardano.PlutusData
    Cardano.Groth16.FFI
    Cardano.Groth16.Types
    Cardano.Groth16.Compress
    Cardano.Groth16.Serialize
    Cardano.Groth16.Prove
    Cardano.Vouchers.Types
    Cardano.Vouchers.Transaction
    Cardano.Vouchers.Script
  build-depends:
    , base                  >= 4.14 && < 5
    , bytestring            >= 0.11
    , cborg                 >= 0.2
    , aeson                 >= 2.0
    , text                  >= 1.2
    , vector                >= 0.12
    , process               >= 1.6
    , plutus-tx
    , plutus-core
    , cardano-ledger-alonzo
    , cardano-ledger-conway
    , cardano-ledger-core
    , cardano-ledger-mary
    , cardano-node-clients
  extra-libraries:
    groth16_ffi

test-suite unit-tests
  type:            exitcode-stdio-1.0
  hs-source-dirs:  test
  main-is:         Main.hs
  default-language: Haskell2010
  ghc-options:     -Wall -threaded
  other-modules:
    Groth16Spec
  build-depends:
    , base
    , cardano-vouchers
    , bytestring
    , aeson
    , hspec >= 2.0
