cabal-version: 3.0
name:          harvest
version:       0.1.0.0
synopsis:      ZK voucher system for Cardano using Groth16 proofs
license:       Apache-2.0
build-type:    Simple

library
  hs-source-dirs:  src
  default-language: Haskell2010
  ghc-options:     -Wall
  exposed-modules:
    Cardano.PlutusData
    Cardano.Groth16.FFI
    Cardano.Groth16.Types
    Cardano.Groth16.Compress
    Cardano.Groth16.Serialize
    Cardano.Groth16.Prove
    Harvest.Actions
    Harvest.Types
    Harvest.Transaction
    Harvest.Script
  build-depends:
    , base                  >= 4.14 && < 5
    , bytestring            >= 0.11
    , cborg                 >= 0.2
    , aeson                 >= 2.0
    , text                  >= 1.2
    , vector                >= 0.12
    , process               >= 1.6
    , base16-bytestring
    , containers
    , plutus-tx
    , plutus-core
    , cardano-ledger-alonzo
    , cardano-ledger-conway
    , cardano-ledger-core
    , cardano-ledger-mary
    , cardano-node-clients
  extra-libraries:
    groth16_ffi

executable encode-vk
  hs-source-dirs:  app
  main-is:         EncodeVK.hs
  default-language: Haskell2010
  ghc-options:     -Wall
  build-depends:
    , base
    , harvest
    , aeson
    , bytestring
    , base16-bytestring

test-suite unit-tests
  type:            exitcode-stdio-1.0
  hs-source-dirs:  test
  main-is:         Main.hs
  default-language: Haskell2010
  ghc-options:     -Wall -threaded
  other-modules:
    Groth16Spec
    E2ESpec
    Fixtures
    SignedDataLayout
    SignedDataLayoutSpec
    Ed25519Spec
    DevnetSpendSpec
    DevnetFullFlowSpec
    HarvestFlow
    SpendHarness
    SpendHarnessSpec
    DevnetEnv
    SpendSetup
    SpendScenario
  build-depends:
    , base
    , harvest
    , bytestring
    , aeson
    , base16-bytestring
    , cardano-crypto-class
    , cardano-ledger-api
    , cardano-ledger-conway
    , cardano-ledger-core
    , cardano-ledger-mary
    , cardano-node-clients
    , cardano-node-clients:devnet
    , containers
    , hspec >= 2.0
    , microlens
    , plutus-core
    , plutus-tx
    , serialise
